name:                double-conversion
version:             2.0.2.0
synopsis:            example with persistent and servant
description:         Simple example to illustrate how to use persistent and servant in combination.
build-type:          Simple
cabal-version:       >=1.10

library

  build-depends:
    base,
    bytestring,
    text
  default-language: Haskell2010
  default-extensions: 
    DataKinds
    DeriveGeneric
    DeriveDataTypeable
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeOperators
  ghc-options: -Wall -Werror -Wno-unused-imports
  hs-source-dirs: src
  exposed-modules:
    Data.Double.Conversion.Convertable
    Data.Double.Conversion.Text
    Data.Double.Conversion.ByteString

