name:                double-conversion
version:             2.0.2.0
synopsis:            Replacement for the double-conversion project, without any C++.
build-type:          Simple
cabal-version:       >=1.10

library

  build-depends:
    base,
    bytestring,
    text
  default-language: Haskell2010
  default-extensions: 
    DataKinds
    DeriveGeneric
    DeriveDataTypeable
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeOperators
  ghc-options: -Wall -Werror -Wno-unused-imports
  hs-source-dirs: src
  exposed-modules:
    Data.Double.Conversion.Convertable
    Data.Double.Conversion.Text
    Data.Double.Conversion.ByteString

